syntax = "proto3";

package transaction;

import "google/api/annotations.proto";

option go_package = "./transaction";

// Transaction service definition
service TransactionService {
  rpc CreateTransaction(CreateTransactionRequest) returns (CreateTransactionResponse) {
    option (google.api.http) = {
      post: "/api/v1/transactions"
      body: "*"
    };
  }
  rpc GetTransaction(GetTransactionRequest) returns (GetTransactionResponse) {
    option (google.api.http) = {
      get: "/api/v1/transactions/{id}"
    };
  }
  rpc GetTransactionHistory(GetTransactionHistoryRequest) returns (GetTransactionHistoryResponse) {
    option (google.api.http) = {
      get: "/api/v1/accounts/{account_id}/transactions"
    };
  }
  rpc ProcessPayment(ProcessPaymentRequest) returns (ProcessPaymentResponse) {
    option (google.api.http) = {
      post: "/api/v1/payments"
      body: "*"
    };
  }
}

// Transaction message
message Transaction {
  string id = 1;
  string account_id = 2;
  string operation_type = 3;
  double amount = 4;
  string description = 5;
  int64 created_at = 6;
  string status = 7;
}

// Request/Response messages
message CreateTransactionRequest {
  string account_id = 1;
  string operation_type = 2;
  double amount = 3;
  string description = 4;
}

message CreateTransactionResponse {
  Transaction transaction = 1;
  string error = 2;
}

message GetTransactionRequest {
  string id = 1;
}

message GetTransactionResponse {
  Transaction transaction = 1;
  string error = 2;
}

message GetTransactionHistoryRequest {
  string account_id = 1;
  int32 limit = 2;
  int32 offset = 3;
}

message GetTransactionHistoryResponse {
  repeated Transaction transactions = 1;
  int32 total = 2;
  string error = 3;
}

message ProcessPaymentRequest {
  string account_id = 1;
  double amount = 2;
  string description = 3;
}

message ProcessPaymentResponse {
  Transaction transaction = 1;
  string error = 2;
}